--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
 
-        "zircote/swagger-php": "^5.0"
+        "zircote/swagger-php": "^5.0",
 
         "spatie/laravel-permission": "^6.12",
         "tymon/jwt-auth": "^2.1"
